--- a/AdminLauncher.AppWPF/MainWindow.xaml
+++ b/AdminLauncher.AppWPF/MainWindow.xaml
@@ -224,7 +224,7 @@ Grid.Row="0" Margin="5"/>
                 <TabItem.Header>
                     <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Margin="0,15,0,0">
                         <packIcons:PackIconMaterial Kind="FileTreeOutline" Width="24" Height="24" Margin="0,0,5,0"/>
-                        <TextBlock Text="File Explorer" VerticalAlignment="Center"/>
+                        <TextBlock Text="Explorer++" VerticalAlignment="Center"/>
                     </StackPanel>
                 </TabItem.Header>
             </TabItem>
