--- a/AdminLauncher.AppWPF/MainWindow.xaml
+++ b/AdminLauncher.AppWPF/MainWindow.xaml
@@ -78,13 +78,10 @@
                     </Grid.RowDefinitions>
 
                     <!-- Textbox for search -->
-                    <TextBox x:Name="SearchBox" Grid.Row="1" Margin="5" VerticalAlignment="Top" 
-  TextChanged="SearchBox_TextChanged" 
-  ToolTip="Enter a program name to filter the list"/>
+                    <TextBox x:Name="SearchBox" Grid.Row="1" Margin="5" VerticalAlignment="Top" TextChanged="SearchBox_TextChanged" ToolTip="Enter a program name to filter the list"/>
 
                     <!-- Label with instruction -->
-                    <Label Content="Select programs to be imported into Home" 
-Grid.Row="0" Margin="5"/>
+                    <Label Content="Select programs to be imported into Home" Grid.Row="0" Margin="5"/>
 
                     <!-- Contenitore per ListBox con scorrimento -->
                     <Border Grid.Row="2" BorderThickness="1">
@@ -107,8 +104,7 @@ Grid.Row="0" Margin="5"/>
                     </Border>
 
                     <!-- Button import -->
-                    <Button Content="Import to Home" Grid.Row="3" HorizontalAlignment="Right" 
- Margin="5" Width="150" Click="ProcessSelectedPrograms"/>
+                    <Button Content="Import to Home" Grid.Row="3" HorizontalAlignment="Right" Margin="5" Width="150" Click="ProcessSelectedPrograms"/>
                 </Grid>
             </TabItem>
 
@@ -416,8 +412,11 @@ This software is distributed under the GNU General Public License v3.0.
 
                                 <!-- Credits -->
                                 <TextBlock FontSize="16" FontWeight="Bold" Text="Credits" Margin="0,10,0,10"/>
-                                <TextBlock FontSize="14" TextWrapping="Wrap" Margin="0,0,0,10">
+                                <TextBlock FontSize="14" TextWrapping="Wrap" Margin="0,0,0,5">
 IconExtractor by jsakamoto <Hyperlink NavigateUri="https://github.com/jsakamoto/iconextractor" RequestNavigate="Hyperlink_RequestNavigate">ProjectSite</Hyperlink>
+                                </TextBlock>
+                                <TextBlock FontSize="14" TextWrapping="Wrap" Margin="0,0,0,10">
+Explorer++ by David Erceg <Hyperlink NavigateUri="https://explorerplusplus.com/" RequestNavigate="Hyperlink_RequestNavigate">ProjectSite</Hyperlink>
                                 </TextBlock>
 
                                 <!-- Support and contact -->
